@@ -10,3 +10,11 @@ RC=0
 16-After 111
 17-After 222 18-After 333
 RC=0
+---------------------------- Test U3 ------------------------------
+12:0,2
+13:0,2
+13:2,2
+13:4,2
+13:6,2
+13:8,2
+RC=0
